variadics/tests/compile-fail/var_missing_comma.rs
use variadics::*;

fn main() {
    let _ = var!(1, 2.0 "three", false);
}